<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">预警12379</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="fragment1">首页</string>
    <string name="fragment2">监测</string>
    <string name="fragment3">资讯</string>
    <string name="fragment4">直报</string>
    <string name="fragment5">疫情</string>
    <string name="back">返回</string>
    <string name="editor">编辑</string>
    <string name="complete">完成</string>
    <string name="sure_delete_cache">确定要清除缓存？</string>
    <string name="delete_cache">清除缓存</string>
    <string name="sure_delete_data">确定要清除数据？</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="confirm_exit">再按一次退出</string>
    <string name="dial">拨打</string>
    <string name="input_keywords">请输入关键字</string>
    <string name="this_area">本地区</string>
    <string name="gong">共</string>
    <string name="tiao">条</string>
    <string name="publish">发布</string>
    <string name="warning">预警</string>
    <string name="warning_info">预警地图</string>
    <string name="warning_detail">预警详情</string>
    <string name="warning_list">预警列表</string>
    <string name="nation_warning">国家级预警</string>
    <string name="province_warning">省级预警</string>
    <string name="city_warning">地市级预警</string>
    <string name="district_warning">区县级预警</string>
    <string name="warning_class">预警种类</string>
    <string name="warning_level">预警等级</string>
    <string name="warning_district">发布区域</string>
    <string name="all">全部</string>
    <string name="warning_guide">预警指南：\n</string>
    <string name="no_warning">暂无预警信息发布</string>
    <string name="add_city">添加城市</string>
    <string name="input_city_name">请输入城市名</string>
    <string name="hot_city">热门城市</string>
    <string name="today">今天</string>
    <string name="week">周</string>
    <string name="body_temp">体感温度</string>
    <string name="humidity">相对湿度</string>
    <string name="most_add_city">最多只可添加10个关注城市</string>
    <string name="already_added_city">已添加过该城市</string>
    <string name="title_rain1">逐小时降水量</string>
    <string name="title_rain24">24小时降水量</string>
    <string name="title_temp">温度</string>
    <string name="title_wind">风速风向</string>
    <string name="publish_time">发布时间</string>
    <string name="news_detail">资讯详情</string>
    <string name="forecast">预报</string>
    
    <!-- 设置界面 -->
	<string name="setting_push">预警推送策略</string>
	<string name="setting_feedback">意见反馈</string>
	<string name="setting_version">检测版本</string>
	<string name="setting_clearcache">清除缓存</string>
	<string name="setting_cleardata">清除数据</string>
	<string name="setting_build">预警中心简介</string>
    <string name="setting_recmmend">应用推荐</string>
	<string name="setting_hotline1">气象服务热线</string>
	<string name="setting_hotline2">运行保障热线</string>
	<string name="setting_version_code">版本号</string>
	<string name="setting_quit">退出</string>
	
	<!-- 蒲公英自动更新 -->
    <string name="auto_update">更新提醒</string>
    <string name="new_version">最新版本：</string>
    <string name="update_log">更新日志：</string>
    <string name="update_right_now">立即更新</string>
    <string name="update_later">以后再说</string>
    <string name="already_new_version">已经是最新版本！</string>
    
    <!-- 预警中心介绍 -->
    <string name="center_introduce">\t\t\t\t国家预警信息发布中心成立于2015年2月26日，挂靠中国气象局公共气象服务中心。中心是国务院应急管理部门面向政府应急责任人和社会公众提供综合预警信息的权威发布机构，是国家应急管理体系的重要组成部分。主要承担国家突发事件预警信息发布系统（简称“国家预警发布系统”）建设及运行维护管理，为相关部门发布预警信息提供综合发布渠道，研究拟定相关政策和技术标准，开展预警信息科普与宣传等工作。
\n\t\t\t\tNational Early Warning Center is founded on Feb. 26th, 2015, which is under Public MeteorologicalService Center of China Meteorological Administration. As an essential part in national emergency management system, it is the authority institution under the State Council Emergency Management Department provides comprehensive early warning information towards the government leaders responsible for emergency issues as well as the public.It is mainly responsible for the construction,operation and maintenance of national early warning release system, and offers an overall release channel for relevant departments, studies and formulates relevant policies and technical standards. As well as carries out early warning information to publicity and popularization.</string>
    
    <!-- 天气表 -->
    <string name="weather0">晴</string>
    <string name="weather1">多云</string>
    <string name="weather2">阴</string>
    <string name="weather3">阵雨</string>
    <string name="weather4">雷阵雨</string>
    <string name="weather5">雨夹冰雹</string>
    <string name="weather6">雨夹雪</string>
    <string name="weather7">小雨</string>
    <string name="weather8">中雨</string>
    <string name="weather9">大雨</string>
    <string name="weather10">暴雨</string>
    <string name="weather11">大暴雨</string>
    <string name="weather12">特大暴雨</string>
    <string name="weather13">阵雪</string>
    <string name="weather14">小雪</string>
    <string name="weather15">中雪</string>
    <string name="weather16">大雪</string>
    <string name="weather17">暴雪</string>
    <string name="weather18">雾</string>
    <string name="weather19">冻雨</string>
    <string name="weather20">沙尘暴</string>
    <string name="weather21">小雨-中雨</string>
    <string name="weather22">中雨-大雨</string>
    <string name="weather23">大雨-暴雨</string>
    <string name="weather24">暴雨-大暴雨</string>
    <string name="weather25">大暴雨-特大暴雨</string>
    <string name="weather26">小雪-中雪</string>
    <string name="weather27">中雪-大雪</string>
    <string name="weather28">大雪-暴雪</string>
    <string name="weather29">浮尘</string>
    <string name="weather30">扬沙</string>
    <string name="weather31">强沙尘暴</string>
    <string name="weather32">浓雾</string>
    <string name="weather33">雪</string>
    <string name="weather49">强浓雾</string>
    <string name="weather53">霾</string>
    <string name="weather54">中度霾</string>
    <string name="weather55">重度霾</string>
    <string name="weather56">严重霾</string>
    <string name="weather57">大雾</string>
    <string name="weather58">特强浓雾</string>
    
    <!-- 风向 -->
    <string name="chart_north">北</string>
    <string name="chart_north_east">东北</string>
    <string name="chart_east">东</string>
    <string name="chart_south_east">东南</string>
    <string name="chart_south">南</string>
    <string name="chart_south_west">西南</string>
    <string name="chart_west">西</string>
    <string name="chart_north_west">西北</string>
    
    <!-- 风向表 -->
    <string name="wind_dir0">无持续风向</string>
    <string name="wind_dir1">东北风</string>
    <string name="wind_dir2">东风</string>
    <string name="wind_dir3">东南风</string>
    <string name="wind_dir4">南风</string>
    <string name="wind_dir5">西南风</string>
    <string name="wind_dir6">西风</string>
    <string name="wind_dir7">西北风</string>
    <string name="wind_dir8">北风</string>
    <string name="wind_dir9">旋转风</string>
    
    <!-- 风力表 -->
    <string name="wind_force0">微风</string>
    <string name="wind_force1">1级</string>
    <string name="wind_force2">2级</string>
    <string name="wind_force3">3级</string>
    <string name="wind_force4">4级</string>
    <string name="wind_force5">5级</string>
    <string name="wind_force6">6级</string>
    <string name="wind_force7">7级</string>
    <string name="wind_force8">8级</string>
    <string name="wind_force9">9级</string>
    <string name="wind_force10">10级</string>
    <string name="wind_force11">11级</string>
    <string name="wind_force12">12级</string>
    
    <!-- 空气质量表 -->
    <string name="aqi0">优</string>
    <string name="aqi1">良</string>
    <string name="aqi2">轻度污染</string>
    <string name="aqi3">中度污染</string>
    <string name="aqi4">重度污染</string>
    <string name="aqi5">严重污染</string>
    
    <!-- 单位符号 -->
    <string name="unit_percent">%</string>
    <string name="unit_mm">mm</string>
    <string name="unit_hPa">hPa</string>
    <string name="unit_degree">℃</string>
    <string name="unit_speed">m/s</string>
    <string name="unit_m">m</string>
    <string name="unit_km">km</string>
    <string name="unit_hour">小时</string>
    <string name="unit_minute">分钟</string>

    <!-- 个推 -->
    <string name="no_clientid">(none)</string>
    <string name="start">已启动</string>
    <string name="clientid">clientid&#160;=&#160;</string>
    <string name="stop">已停止</string>
    <string name="clear">清除日志</string>
    <string name="enablelog">开启debug日志</string>
    <string name="bindcell">绑定手机号</string>
    <string name="pmsg">透传测试</string>
    <string name="psmsg">通知栏测试</string>
    <string name="transmit">透传内容</string>
    <string name="begin">开始(h)</string>
    <string name="end">结束</string>
    <string name="duration">持续时间(h)</string>
    <string name="set_heartbeat">心跳间隔(s)</string>
    <string name="send_msg">发送消息</string>
    <string name="bind_alias">绑定别名</string>
    <string name="bind_alias_unknown_exception">绑定别名失败，未知异常</string>
    <string name="bind_alias_success">绑定别名成功</string>
    <string name="bind_alias_error_frequency">绑定别名失败，请求频次超限</string>
    <string name="bind_alias_error_param_error">绑定别名失败，参数错误</string>
    <string name="bind_alias_error_request_filter">绑定别名失败，请求被过滤</string>
    <string name="bind_alias_error_cid_lost">绑定别名失败，未获取到cid</string>
    <string name="bind_alias_error_connect_lost">绑定别名失败，网络错误</string>
    <string name="bind_alias_error_alias_invalid">绑定别名失败，别名无效</string>
    <string name="bind_alias_error_sn_invalid">绑定别名失败，sn无效</string>
    <string name="unbind_alias">解绑别名</string>
    <string name="unbind_alias_unknown_exception">取消绑定别名失败，未知异常</string>
    <string name="unbind_alias_success">取消绑定别名成功</string>
    <string name="unbind_alias_error_frequency">取消绑定别名失败，请求频次超限</string>
    <string name="unbind_alias_error_param_error">取消绑定别名失败，参数错误</string>
    <string name="unbind_alias_error_request_filter">取消绑定别名失败，请求被过滤</string>
    <string name="unbind_alias_error_cid_lost">取消绑定别名失败，未获取到cid</string>
    <string name="unbind_alias_error_connect_lost">取消绑定别名失败，网络错误</string>
    <string name="unbind_alias_error_alias_invalid">取消绑定别名失败，别名无效</string>
    <string name="unbind_alias_error_sn_invalid">取消绑定别名失败，sn无效</string>
    <string name="add_tag">添加标签</string>
    <string name="add_tag_unknown_exception">设置标签失败，未知异常</string>
    <string name="add_tag_success">接口调用成功</string>
    <string name="add_tag_error_count">接口调用失败, tag数量过大, 最大不能超过200个</string>
    <string name="add_tag_error_frequency">设置标签失败，频率过快</string>
    <string name="add_tag_error_null">接口调用失败, tag 为空</string>
    <string name="add_tag_error_repeat">设置标签失败, 标签重复</string>
    <string name="add_tag_error_unbind">设置标签失败, 服务未初始化成功</string>
    <string name="add_tag_error_not_online">还未登陆成功</string>
    <string name="add_tag_error_black_list">该应用已经在黑名单中,请联系售后支持!</string>
    <string name="add_tag_error_exceed">已存 tag 超过限制</string>
    <string name="version">版本号</string>
    <string name="silentime">静默时间</string>
    <string name="getclientid">获取cid</string>
    <string name="confirm">确定</string>
    <string name="exit">退出</string>
    <string name="appid">appid&#160;=&#160;</string>
    <string name="appkey">appkey&#160;=&#160;</string>
    <string name="appsecret">appsecret&#160;=&#160;</string>
    <string name="mastersecret">mastersecret&#160;=&#160;</string>
    <string name="show_version">当前sdk版本&#160;=&#160;</string>
    <string name="show_cid">当前应用的cid&#160;=&#160;</string>
    <string name="set_silenttime">设置静默时间段</string>
    <string name="push_notification_title">通知栏测试</string>
    <string name="push_notification_msg_title">通知栏测试</string>
    <string name="push_notification_msg_content">您收到一条测试消息，点击访问www.igetui.com</string>
    <string name="push_transmission_data">收到一条透传测试消息</string>
    <string name="network_invalid">对不起，当前网络不可用!</string>
    <!-- 个推 -->

</resources>
