<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/ivBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"/>

    <RelativeLayout
        android:id="@+id/reTitle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/ivBanner"
        android:background="@color/title_bg"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivMenu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:padding="10dp"
            android:src="@drawable/iv_add_white" />

        <ImageView
            android:id="@+id/ivTitle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:src="@drawable/iv_logo" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="@dimen/level_3"/>

        <ImageView
            android:id="@+id/ivMy"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:padding="10dp"
            android:src="@drawable/iv_person" />
    </RelativeLayout>

    <com.warning.view.MainViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/reTitle"
        android:layout_above="@+id/llTab"
        android:layout_gravity="center" />

    <LinearLayout
        android:id="@+id/llTab"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:background="@color/title_bg"
        android:gravity="center_vertical" >

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <ImageView
                android:id="@+id/iv1"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:src="@drawable/iv_fragment1_press" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/fragment1"
                android:textColor="@color/white"
                android:textSize="@dimen/level_5" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll5"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <ImageView
                android:id="@+id/iv5"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:src="@drawable/iv_fragment5" />

            <TextView
                android:id="@+id/tv5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/fragment5"
                android:textColor="@color/white"
                android:textSize="@dimen/level_5" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <ImageView
                android:id="@+id/iv2"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:src="@drawable/iv_fragment2" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/fragment2"
                android:textColor="@color/white"
                android:textSize="@dimen/level_5" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <ImageView
                android:id="@+id/iv3"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:src="@drawable/iv_fragment3" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/fragment3"
                android:textColor="@color/white"
                android:textSize="@dimen/level_5" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <ImageView
                android:id="@+id/iv4"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:src="@drawable/iv_fragment4" />

            <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/fragment4"
                android:textColor="@color/white"
                android:textSize="@dimen/level_5" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>